--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,3 +1,5 @@
-{%  include 'base.html.twig' %}
+{%  extends 'base.html.twig' %}
 
-<h3>Home page</h3>
+{% block body %}
+    <h3>Home page</h3>
+{% endblock %}
