--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,5 +1,14 @@
-{%  extends 'base.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block body %}
-    <h3>Home page</h3>
+    <div class="container">
+        <h3>Home page</h3>
+        <div class="progress" style="width:50%;">
+            <div class="progress-bar bg-success" style="width: 50%"></div>
+        </div>
+
+        {{ form_start(form) }}
+        {{ form_widget(form) }}
+        {{ form_end(form) }}
+    </div>
 {% endblock %}
