Modify files structure in templates directory

--- a/templates/mainpage/main.html.twig
+++ b/templates/mainpage/main.html.twig
@@ -8,7 +8,7 @@
         </title>
 
         <!-- Assets -->
-        {% include 'assets.html.twig' %}
+        {% include 'mainpage/assets.html.twig' %}
         <!-- Assets -->
 
     </head>
@@ -62,19 +62,19 @@
 
                             <!-- Sidebar -->
 
-                            {% include 'sidebar.html.twig' %}
+                            {% include 'mainpage/sidebar.html.twig' %}
 
                             <!-- Sidebar -->
 
                         </aside>
 
                         <!-- Content -->
-                        {% include 'content.html.twig' %}
+                        {% include 'mainpage/content.html.twig' %}
                         <!-- Content -->
 
 
                         <!-- Footer -->
-                    {% include 'footer.html.twig'%}
+                    {% include 'mainpage/footer.html.twig'%}
                         <!-- Footer -->
 
                     </div>
