Refactor mainpage template

--- a/templates/mainpage/content.html.twig
+++ b/templates/mainpage/content.html.twig
@@ -1,3 +1,7 @@
-<div class="content-wrapper">
-    <div class="content" style="height:99%;"></div>
-</div>
+{% block content %}
+    <div class="content-wrapper">
+        <div class="content" style="height:99%;">
+            {# Your content #}
+        </div>
+    </div>
+{% endblock %}
