--- a/templates/mainpage/footer.html.twig
+++ b/templates/mainpage/footer.html.twig
@@ -1,5 +1,7 @@
-<footer class="main-footer" style="position:absolute; bottom:0; width: 100%; padding-right: 15%;">
-    <div class="float-right d-none d-sm-inline">
-        NetMarketing.com
-    </div>
-</footer>
+{% block footer %}
+    <footer class="main-footer" style="position:absolute; bottom:0; width: 100%; padding-right: 15%;">
+        <div class="float-right d-none d-sm-inline">
+            NetMarketing.com
+        </div>
+    </footer>
+{% endblock %}
