--- a/templates/mainpage/footer.html.twig
+++ b/templates/mainpage/footer.html.twig
@@ -1,6 +1,6 @@
 {% block footer %}
-    <footer class="main-footer" style="position:absolute; bottom:0; width: 100%; padding-right: 15%;">
-        <div class="float-right d-none d-sm-inline">
+    <footer class="main-footer" style="position:absolute; width: 100%; ">
+        <div class="float-right d-none d-sm-inline" style="position:sticky; right: 40px;">
             NetMarketing.com
         </div>
     </footer>
