--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,28 +1,36 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}Log in!
+{% endblock %}
 
 {% block body %}
-    <div class="container">
-        <form method="post">
-            {% if error %}
-                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-            {% endif %}
+<link rel="stylesheet" href="{{ asset('css/login.css') }}">
+       <html>
+        <body id="LoginForm">
+            <div class="container">
 
-            <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-            <label for="inputLogin" class="sr-only">Login</label>
-            <input type="text" value="{{ last_username }}" name="login" id="inputLogin" class="form-control"
-                   placeholder="Login" required autofocus>
-            <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password"
-                   required>
+                <div class="login-form">
+                    <div class="main-div">
 
-            <input type="hidden" name="_csrf_token"
-                   value="{{ csrf_token('authenticate') }}">
+                        <form method="post">
+                            {% if error %}
+                                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                            {% endif %}
+                            <h1 class="h3 mb-5 font-weight-normal">Login page</h1>
+                            <label class="sr-only" for="inputLogin">Login</label>
+                            <input type="text" value="{{ last_username }}" name="login" id="inputLogin" class="form-control" placeholder="Login" required autofocus>
+                            <label class="sr-only" for="inputPassword">Password</label>
+                            <input class="form-control mt-3" id="inputPassword" name="password" placeholder="Password" required type="password">
+                            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+                            <div class="forgot mt-2">
+                                <a href="reset.html">Forgot password?</a>
+                            </div>
+                            <button class="btn btn-lg btn-primary " type="submit">Login</button>
+                        </form>
+                    </div>
 
-            <button class="btn btn-lg btn-primary" type="submit">
-                Sign in
-            </button>
-        </form>
-    </div>
-{% endblock %}
+                </div>
+            </div>
+        </body>
+    </html>
+</div></body></html>{% endblock %}
