--- a/templates/mainpage/content.html.twig
+++ b/templates/mainpage/content.html.twig
@@ -1,6 +1,6 @@
 {% block content %}
     <div class="content-wrapper">
-        <div class="content" style="height:99%;">
+        <div class="content">
             {# Your content #}
             
         </div>
