--- a/templates/mainpage/footer.html.twig
+++ b/templates/mainpage/footer.html.twig
@@ -1,7 +1,5 @@
 {% block footer %}
-    <footer class="main-footer" style="position:absolute; width: 100%; ">
-        <div class="float-right d-none d-sm-inline" style="position:sticky; right: 40px;">
-            NetMarketing.com
-        </div>
+    <footer class="main-footer">
+            Pszemke.App!
     </footer>
 {% endblock %}
