--- a/templates/mainpage/sidebar.html.twig
+++ b/templates/mainpage/sidebar.html.twig
@@ -1,14 +1,14 @@
 {% block sidebar %}
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
         <a class="brand-link" href="#">
-            <i class="fab fa-facebook-square" style="margin-left: 19px; size:3x"></i>
-            <span class="brand-text font-weight-light" style="margin-left: 5px;">NetMarketing.com
+            <i class="fab fa-docker" style="margin-left: 19px; size:3x"></i>
+            <span class="brand-text font-weight-light" style="margin-left: 5px;">Pszemke.App!
             </span>
         </a>
         <div class="sidebar">
             <nav class="mt-2">
                 <ul class="nav nav-pills nav-sidebar flex-column" data-accordion="false" data-widget="treeview" role="menu">
-                    <li class="nav-item has-treeview menu-open">
+                    <li class="nav-item  active treeview menu-open">
                         <a class="nav-link" href="#">
                             <i class="nav-icon fa fa-edit"></i>
                             <p>
@@ -16,19 +16,19 @@
                             </p>
                         </a>
                         <ul class="nav nav-treeview" style="display: block;">
-                            <li class="nav-item nav-link show lista show_all_posts">
-                                <a href="#">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">
                                     <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>Przeglądaj</p>
+                                    <p>Przegladaj</p>
                                 </a>
                             </li>
-                            <li class="nav-item nav-link dodaj lista add_new_post">
-                                <a href="#">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">
                                     <i class="fa fa-circle-o nav-icon"></i>
                                     <p>Dodaj</p>
                                 </a>
                             </li>
-                            <li class="nav-item archive lista show_archive">
+                            <li class="nav-item archive">
                                 <a class="nav-link" href="#">
                                     <i class="fa fa-circle-o nav-icon"></i>
                                     <p>Archiwum</p>
