--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,4 +1,8 @@
-body#LoginForm {
+body{
+    overflow: hidden;
+}
+
+#LoginForm {
     background-image: url("https://hdwallsource.com/img/2014/9/blur-26347-27038-hd-wallpapers.jpg");
     background-repeat: no-repeat;
     background-position: center;
@@ -6,7 +10,7 @@ body#LoginForm {
     padding: 10px;
 }
 
-body {
+#LoginForm {
     height: 100vh;
 }
 
@@ -39,6 +43,9 @@ body {
     margin: 15vh auto 30px;
     max-width: 38%;
     padding: 50px 70px 70px 71px;
+    -webkit-box-shadow: 0px -4px 34px 0px rgba(0, 0, 0, 0.50);
+    -moz-box-shadow: 0px -4px 34px 0px rgba(0,0,0,0.50);
+    box-shadow: 0px -4px 34px 0px rgba(0,0,0,0.50);
 }
 
 .login-form .form-group {
