--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,361 +1,25 @@
-.lista:hover
-{
-    background-color: #6c757d !important;
-    color: white;
-    border-radius: 4px;
-}
-
-.posty{
-    font-family: 'Roboto', sans-serif;
-    width: 100%;
-    height: 80vh !important;
-    box-sizing: border-box;
-    padding: 30px;
-    padding-left: 90px; 
-    overflow-y:scroll;
-}
-
-.posty ul{
-    margin-top: 40px;
-    list-style: none;
-    margin-left: -40px;
-
-}
-.posty ul li{
-    margin-bottom: 15px;
-    border: 1px solid #6c757d;
-    height: 55px;
-    border-radius: 10px;
-    display:flex;
-    align-items: center;
-    padding-left: 20px;
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
-    position: relative;
-}
-
-.posty ul li .btn{
-    margin-left: 15px;
-}
-.buttons{
-    
-    position: absolute;
-    right: 30px;
-}
-
-
-
-#form_temat{
-    width: 80%;
-    margin-top: 30px;
-    height: 40px;
-    border-radius: 7px;
-    border: 1px solid gray;
-    box-sizing: border-box;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-#form_tresc{
-    width: 80%;
-    height: 250px;
-    margin-top: 50px;
-    border-radius: 7px;
-    border: 1px solid gray;
-    box-sizing: border-box;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-.required{
-    display: none;
-}
-
-#form_submit{
-    margin-top: 15px;
-    width: 90px;
-    height: 35px;
-}
-.form{
+*{
     overflow: hidden;
 }
 
-.logowanie{
-    width: 100%;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-image: url('beton.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    z-index: 1;
-  /*  filter: blur(8px);
-  -webkit-filter: blur(8px);*/
-  
-
-}
-.logowanie ::backdrop
-{
-    filter: alpha(opacity=50);
-}
-
-.log_form{
-    background-color: #F2F3F4;
-    height: 500px;
-    width: 400px;
-    filter: blur(0px);
-    border-radius: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.logowanie #form_login{
-    width: 300px;
-    margin-bottom: 25px;
+.main-footer{
     height: 40px;
-    border-radius: 5px;
-    border: 1px solid lightslategray;
+    position:fixed;
+    width: 100%;
+    bottom: 0;
+    text-align: left;
     padding: 8px;
 }
-.logowanie #form_haslo{
-    width: 300px;
-    height: 40px;
-    border-radius: 5px;
-    border: 1px solid lightslategray;
-    padding: 8px;
+.logout-button{
+    position:absolute; 
+    right: 40px; 
+    font-size: 25px; 
+    color: black; 
+    margin: auto;
+    transition: font-size 0.5s;
 }
-
-.logowanie #form_submit{
-position: absolute;
-bottom: 45px;
-width: 300px;
-height: 65px;
-}
- .kludka{
-    font-size: 80px;
-    color: #A6ACAF;
-    z-index: 3;
-    position: absolute;
-    top: 60px;
-}
-
-.tresc_posta{
-    margin-top: 30px;
-    font-size: 20px;
-}
-.tytul_posta{
-    margin-top: 30px;
-    font-size: 20px;
-}
-.edytuj button{
-    margin-top: 30px;
-    width: 170px;
-}
-.edytuj #form_submit{
-    width: 170px;
-    position: relative;
-    left: 230px;
-    bottom: 55px;
-}
-.logout{
-    margin-right: 15px;
-    margin-top: 12px;
-}
-.logout:hover{
-    cursor: pointer;
-    color:red;
-}
-#powitanie{
-    position: relative;
-   left: 40px;
-   bottom: 17px;
-   font-size: 20px;
-   font-family: 'Roboto', sans-serif;
-   font-weight: bold;
-   color: black;
-}
-.edytuj_token input{
-width: 90%;
-height: 60px;
-border-radius: 8px;
-border: solid 1px black;
-padding: 15px;
-font-size: 23px;
-margin-bottom: 35px;
-
-}
-.edytuj_token .stary_token{
-margin-top: 35px;
-margin-bottom: 35px;
-font-size: 23px;
-}
-
-.zmien_dane input{
-    width: 90%;
-    height: 45px;
-    border-radius: 8px;
-    border: solid 1px black;
-    padding: 15px;
-    font-size: 23px;
-    margin-bottom: 35px;
-}
-.zmien_dane h1{
-    margin-bottom: 20px;
-}
-.nowy_token_u{
-    width: 80%;
-    border-radius: 5px;
-    border: 1px solid gray;
-    padding-left: 10px;
-}
-
- .nowe_konto input{
-    width: 50%;
-    margin-top: 15px;
-    margin-bottom: 15px;
-    height: 45px;
-    border-radius: 10px;
-    border: 1px solid gray;
-    padding-left: 15px;
-}
-.nowe_konto h3{
-margin-top: 35px;
-}
-
-.nowe_konto .container input{
-
-margin-left: -150px;
-
-}
-.nowe_konto .container .napis{
-   font-size: 20px;
-   
-}
-.nowe_konto button{
-    margin-top: 90px;
-    width: 50%;
-}
-
-.messenger1{
-    width: 90%;
-    height: 545px;
-    border: 2px gray solid;
-    border-radius: 3px;
-    
-}
-.messenger1 .lewy{
-    
-    width: 30%;
-    height: 543px;
-}
-.messenger1 .prawy{
-    border-left: 2px solid gray;
-    width: 70%;
-    height: 543px;
-}
-.messenger1 .napis_mess{
-    border-bottom: 2px solid gray;
-    width: 100%;
-    text-align: center;
-    margin-top: 15px;
-    padding-bottom: 15px; 
-}
-.messenger1 .footer{
-   /* margin-top: 420px;*/
-    bottom: 0px;
-    width: 100%;
-    height: 51px;
-    border-top: 2px solid gray;
-    
-}
-.wyslij_button{
-    height: 54px;
-    width: 100%;
-    
-}
-.messenger1 textarea{
-    width: 100% !important;
-}
-.lista_messenger{
-    width: 100%;
-    height: 467px;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    margin-top: -8px;
-}
-.lista_messenger ul li{
-    margin: 0;
-    border-radius: 0px;
-    border-top: 2px solid gray; 
-    border-right: none;
-    margin-top: 0;
-}
-.lista_messenger ul li:last-child{
-    border-bottom: 2px solid gray; 
-}
-.lista_messenger ul{
-    margin-top: 0px;
-    padding-top: 0px;
-}
-.active_conv{
-    background-color: #DCDCDC;
+.logout-button:hover{
+    font-size: 30px;
     font-weight: bold;
-}
-.rozmowa{
-    width: 100%;
-    height: 420px;
-   overflow-y: scroll;
-    margin-top: -7px;
-}
-.miejsce_na_tekst{
-    max-width: 45%;
-    margin-left: 30px;
-    background-color: #ff9900;
-    color: white;
-}
-.not_mine{
-    background-color: darkgray;
-   margin-left: 45%;
-}
-.zadanie_lista_wypisz{
-    height: 200px;
-}
-.posty .zadania{
-    
-}
-.lista_ludzi{
-    width: 70%;
-    height: 350px;
-    overflow-y: scroll;
-}
-.zadania
-{
-height: 500px;
-overflow-y: scroll;
-}
-.zadania li
-{
-    margin-top: 35px;
-    border: 1px solid gray;
-    width: 80;
-    list-style: none;
-    border-radius: 10px;
-    padding: 30px;
-}
-.zadania ul{
-    width: 90%;
-}
-.aktywny_li{
-    background-color: gray;
-    color: white;
-    
-}
-.nav-link p{
-    color:white;
-}
-witam_witam:click{
- background-color: white;
+    color: red; 
 }
