--- a/templates/mainpage/assets.html.twig
+++ b/templates/mainpage/assets.html.twig
@@ -5,5 +5,6 @@
     <link href="{{ asset('css/main.css') }}" rel="stylesheet"/>
     <link rel="stylesheet" href="{{ asset('css/font-awesome/css/font-awesome.min.css') }}">
     <link rel="stylesheet" href="{{ asset('css/dist/css/adminlte.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/main.css') }}">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 {% endblock %}
