--- a/templates/mainpage/navbar.html.twig
+++ b/templates/mainpage/navbar.html.twig
@@ -10,5 +10,6 @@
             </li>
             <li class="nav-item d-none d-sm-inline-block"></li>
         </ul>
+       <a href="/logout" class="logout-button"> <i class="fas fa-sign-out-alt"></i></a>
     </nav>
 {% endblock %}
