--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,33 +4,28 @@
 {% endblock %}
 
 {% block body %}
-<link rel="stylesheet" href="{{ asset('css/login.css') }}">
-       <html>
-        <body id="LoginForm">
-            <div class="container">
-
-                <div class="login-form">
-                    <div class="main-div">
-
-                        <form method="post">
-                            {% if error %}
-                                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-                            {% endif %}
-                            <h1 class="h3 mb-5 font-weight-normal">Login page</h1>
-                            <label class="sr-only" for="inputLogin">Login</label>
-                            <input type="text" value="{{ last_username }}" name="login" id="inputLogin" class="form-control" placeholder="Login" required autofocus>
-                            <label class="sr-only" for="inputPassword">Password</label>
-                            <input class="form-control mt-3" id="inputPassword" name="password" placeholder="Password" required type="password">
-                            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-                            <div class="forgot mt-2">
-                                <a href="reset.html">Forgot password?</a>
-                            </div>
-                            <button class="btn btn-lg btn-primary " type="submit">Login</button>
-                        </form>
-                    </div>
-
+    <link rel="stylesheet" href="{{ asset('css/login.css') }}">
+    <div id="LoginForm">
+        <div class="container">
+            <div class="login-form">
+                <div class="main-div">
+                    <form method="post">
+                        <h1 class="h3 mb-5 font-weight-normal">Login page</h1>
+                        {% if error %}
+                            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                        {% endif %}
+                        <label class="sr-only" for="inputLogin">Login</label>
+                        <input type="text" value="{{ last_username }}" name="login" id="inputLogin" class="form-control" placeholder="Login" required autofocus>
+                        <label class="sr-only" for="inputPassword">Password</label>
+                        <input class="form-control mt-3" id="inputPassword" name="password" placeholder="Password" required type="password">
+                        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+                        <div class="forgot mt-2">
+                            <a href="reset.html">Forgot password?</a>
+                        </div>
+                        <button class="btn btn-lg btn-primary " type="submit">Login</button>
+                    </form>
                 </div>
             </div>
-        </body>
-    </html>
-</div></body></html>{% endblock %}
+        </div>
+    </div>
+</div>{% endblock %}
