--- a/templates/mainpage/sidebar.html.twig
+++ b/templates/mainpage/sidebar.html.twig
@@ -16,123 +16,22 @@
                             </p>
                         </a>
                         <ul class="nav nav-treeview" style="display: block;">
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">
+                            <li class="nav-item nav-link">
+                                <a class=" button" href="#" id="/posts">
                                     <i class="fa fa-circle-o nav-icon"></i>
                                     <p>Przegladaj</p>
                                 </a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">
+                            <li class="nav-item nav-link">
+                                <a class="button" href="#" id="/post/new">
                                     <i class="fa fa-circle-o nav-icon"></i>
                                     <p>Dodaj</p>
                                 </a>
                             </li>
                             <li class="nav-item archive">
-                                <a class="nav-link" href="#">
+                                <a class="nav-link button" href="#">
                                     <i class="fa fa-circle-o nav-icon"></i>
                                     <p>Archiwum</p>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-item has-treeview menu-open">
-                        <a class="nav-link" href="#">
-                            <i class="fas fa-users"></i>
-                            <p style="margin-left:7px;">
-                                Zarządzanie kontami
-                            </p>
-                        </a>
-                        <ul class="nav nav-treeview" style="display: block;">
-                            <li class="nav-item lista">
-                                <a class="nav-link edytuj_tokeny" href="#">
-                                    <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>Edytuj tokeny</p>
-                                </a>
-                            </li>
-                            <li class="nav-item lista ">
-                                <a class="nav-link zmien_dane_kont" href="#">
-                                    <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>Zmień dane</p>
-                                </a>
-                            </li>
-                            <li class="nav-item lista">
-                                <a class="nav-link  usun_konto" href="#">
-                                    <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>Usuń konto</p>
-                                </a>
-                            </li>
-                            <li class="nav-item lista">
-                                <a class="nav-link new_konto" href="#">
-                                    <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>Stwórz konto</p>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-item has-treeview menu-open">
-                        <a class="nav-link" href="#">
-                            <i class="far fa-comments"></i>
-                            <p>
-                                Wiadomości
-                            </p>
-                        </a>
-                        <ul class="nav nav-treeview" style="display: block;">
-                            <li class="nav-item nav-link show lista  ">
-                                <a class="messenger" href="#">
-                                    <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>Messenger</p>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-item has-treeview menu-open">
-                        <a class="nav-link" href="#">
-                            <i class="fas fa-briefcase"></i>
-                            <p>
-                                Zadania
-                            </p>
-                        </a>
-                        <ul class="nav nav-treeview" style="display: block;">
-                            <li class="nav-item nav-link show lista dodawanie_zadania">
-                                <a href="#">
-                                    <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>Dodaj zadanie</p>
-                                </a>
-                            </li>
-                            <li class="nav-item nav-link show lista przegladaj_zadania">
-                                <a href="#">
-                                    <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>Przeglądaj</p>
-                                </a>
-                            </li>
-                            <li class="nav-item nav-link show lista odczytaj_zadania">
-                                <a href="#">
-                                    <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>Odczytaj</p>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-item has-treeview menu-open">
-                        <a class="nav-link" href="#">
-                            <i class="fas fa-user-circle"></i>
-                            <p>
-                                Moje konto
-                            </p>
-                        </a>
-                        <ul class="nav nav-treeview" style="display: block;">
-                            <li class="nav-item nav-link show lista edytuj_token">
-                                <a href="#">
-                                    <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>Edytuj token</p>
-                                </a>
-                            </li>
-
-                            <li class="nav-item nav-link show lista zmien_dane">
-                                <a href="#">
-                                    <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>Zmień dane</p>
                                 </a>
                             </li>
                         </ul>
