--- a/templates/mainpage/main.html.twig
+++ b/templates/mainpage/main.html.twig
@@ -32,6 +32,17 @@
         <script crossorigin="anonymous" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
         <script src="{{ asset('css/dist/js/adminlte.min.js') }}"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
+        <script>
+            $(".button").click(function(){
+            let url = $(this).attr('id');
+
+            $.ajax({url: url, success: function(result){
+                                $(".content").html(result);
+            }});
+            });
+        </script>
+    
     {% endblock %}
 </body>
 </html>
