--- a/templates/posts/show_posts.html.twig
+++ b/templates/posts/show_posts.html.twig
@@ -1,24 +1,34 @@
 {% block title %}Posts{% endblock %}
 
 {% block body %}
-        <table class="table table-striped">
-            <thead>
-            <tr>
-                <th scope="col">Id</th>
-                <th scope="col">Title</th>
-                <th scope="col">Date</th>
-                <th scope="col">Show</th>
+    <style>
+        tr th:first-child{
+            text-align:left;
+        }
+        tr td:first-child{
+            text-align:left;
+        }
+    </style>
+    <table class="table table-striped">
+        <thead>
+        <tr style="text-align: center;">
+            <th scope="col">Title</th>
+            <th scope="col">Date</th>
+            <th scope="col">Show</th>
+            <th scope="col">Edit</th>
+            <th scope="col">Delete</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for post in posts %}
+            <tr style="text-align: center;">
+                <td>{{ post.Title }}</td>
+                <td>{{ post.Date|date("d/m/Y H:i") }}</td>
+                <td><a class="btn btn-success" href="#">Show Post</a></td>
+                <td><a class="btn btn-warning" href="#">Edit Post</a></td>
+                <td><a href="/post/delete/{{ post.id }}"><i class="fas fa-trash-alt" style="color:red"></i></a></td>
             </tr>
-            </thead>
-            <tbody>
-            {% for post in posts %}
-                <tr>
-                    <td>{{ post.Title }}</td>
-                    <td>{{ post.Date|date("d/m/Y H:i") }}</td>
-                    <td><a href="#">Show Post</a></td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-
+        {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
