--- a/templates/posts/edit_post.html.twig
+++ b/templates/posts/edit_post.html.twig
@@ -4,5 +4,6 @@
 <div class="container">
     {{ form_start(form) }}
     {{ form_widget(form) }}
+    <button class="btn btn-dark">Edit Post</button>
     {{ form_end(form) }}
 </div>
