--- a/templates/mainpage/sidebar.html.twig
+++ b/templates/mainpage/sidebar.html.twig
@@ -12,26 +12,49 @@
                         <a class="nav-link" href="#">
                             <i class="nav-icon fa fa-edit"></i>
                             <p>
-                                Posty
+                                Posts
                             </p>
                         </a>
                         <ul class="nav nav-treeview" style="display: block;">
                             <li class="nav-item nav-link">
                                 <a class=" button" href="#" id="/posts">
                                     <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>Przegladaj</p>
+                                    <p>Browse</p>
                                 </a>
                             </li>
                             <li class="nav-item nav-link">
                                 <a class="button" href="#" id="/post/new">
                                     <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>Dodaj</p>
+                                    <p>New Post</p>
                                 </a>
                             </li>
                             <li class="nav-item archive">
                                 <a class="nav-link button" href="#">
                                     <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>Archiwum</p>
+                                    <p>Archieves</p>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <!--********************************************************-->
+                    <li class="nav-item  active treeview menu-open">
+                        <a class="nav-link" href="#">
+                            <i class="nav-icon fa fa-edit"></i>
+                            <p>
+                                Quests
+                            </p>
+                        </a>
+                        <ul class="nav nav-treeview" style="display: block;">
+                            <li class="nav-item nav-link">
+                                <a class=" button" href="#" id="/quest/new">
+                                    <i class="fa fa-circle-o nav-icon"></i>
+                                    <p>New Quest</p>
+                                </a>
+                            </li>
+                            <li class="nav-item nav-link">
+                                <a class="button" href="#" id="/post/new">
+                                    <i class="fa fa-circle-o nav-icon"></i>
+                                    <p>Edit Quest</p>
                                 </a>
                             </li>
                         </ul>
