--- a/templates/quests/new_quest.html.twig
+++ b/templates/quests/new_quest.html.twig
@@ -1,16 +1,25 @@
-<div class="container">
+<div class="container-fluid mt-5" style="background: white; padding: 30px; border: 1px solid lightgray; border-top: 3px solid gray; border-top-left-radius: 5px; border-top-right-radius: 5px;">
+
+    <h1 class="mb-5">Add new Quest</h1>
+
     <form action="{{ path('add_quest') }}" method="POST">
-        <div class="row">Content:<input type="textarea" name="Content" required></div>
-        <div class="row">Date:<input type="date" min="2019-07-16" max="2019-12-31" name="EndDate" required></div>
-        <div class="row"><select name="Status" required>
-                <option value=0>0%</option>
-                <option value=20>20%</option>
-                <option value=40>40%</option>
-                <option value=60>60%</option>
-                <option value=80>80%</option>
-                <option value=100>100%</option>
+        <label for="inputContent">Content:</label>
+        <input
+        class="form-control" id="inputContent" name="Content" required type="text">
+
+        {# <div class="row">Content:<input type="textarea"  required></div>#}
+        <div class="mt-4">
+            <label for="inputContent">Date:</label><input class="form-control" max="2019-12-31" min="2019-07-16" name="EndDate" required type="date"></div>
+        <div class="row">
+            <select name="Status" required style="display:none;">
+                <option value="0">0%</option>
+                <option value="20">20%</option>
+                <option value="40">40%</option>
+                <option value="60">60%</option>
+                <option value="80">80%</option>
+                <option value="100">100%</option>
             </select>
         </div>
-        <div class="row"><input type="submit" value="Submit"></div>
+        <div><input class="btn btn-dark mt-4" type="submit" value="Submit"></div>
     </form>
 </div>
