--- a/templates/posts/show_posts.html.twig
+++ b/templates/posts/show_posts.html.twig
@@ -1,4 +1,4 @@
-{% block body %}
+{% block styles %}
     <style>
         tr th:first-child {
             text-align: left;
@@ -6,21 +6,23 @@
         tr td:first-child {
             text-align: left;
         }
-        .delete_post{
-            color:red;
+        .delete_post {
+            color: red;
             transition: all 0.5s;
         }
-        .delete_post:hover{
-            color:white;
+        .delete_post:hover {
+            color: white;
         }
-        .send_post{
-            color:blue;
+        .send_post {
+            color: blue;
             transition: all 0.5s;
         }
-        .delete_post:send{
-            color:white;
+        .delete_post:send {
+            color: white;
         }
     </style>
+{% endblock %}
+{% block body %}
     <table class="table table-striped">
         <thead>
             <tr style="text-align: center;">
@@ -52,7 +54,7 @@
                     <td>
                         <button class="btn btn-outline-primary send_post" data-target="#exampleModalCenterSend" data-toggle="modal" type="button">
                             <i class="fas fa-share-alt"></i>
-                        </button>    
+                        </button>
                     </td>
                 </tr>
                 <!-- Delete post modal -->
@@ -60,10 +62,16 @@
                     <div class="modal-dialog modal-dialog-centered" role="document">
                         <div class="modal-content">
                             <div class="modal-body text-center">
-                                <h1><i class="far fa-question-circle mt-2"></i></h1>
-                                <h2 class="mt-4 mb-3"><bold>Are you sure?</bold></h2>
+                                <h1>
+                                    <i class="far fa-question-circle mt-2"></i>
+                                </h1>
+                                <h2 class="mt-4 mb-3">
+                                    <bold>Are you sure?</bold>
+                                </h2>
                                 <h5>Do you want to delete post?</h5>
-                                <a href="/post/delete/{{ post.id }}"><button class="btn-lg btn-outline-danger mt-5 mr-2" type="button">Delete</button></a>
+                                <a href="/post/delete/{{ post.id }}">
+                                    <button class="btn-lg btn-outline-danger mt-5 mr-2" type="button">Delete</button>
+                                </a>
                                 <button class="btn-lg btn-outline-secondary mt-5 ml-2" data-dismiss="modal" type="button">Cancel</button>
                             </div>
                         </div>
@@ -75,10 +83,16 @@
                     <div class="modal-dialog modal-dialog-centered" role="document">
                         <div class="modal-content">
                             <div class="modal-body text-center">
-                                <h1><i class="far fa-question-circle mt-2"></i></h1>
-                                <h2 class="mt-4 mb-3"><bold>Are you sure?</bold></h2>
+                                <h1>
+                                    <i class="far fa-question-circle mt-2"></i>
+                                </h1>
+                                <h2 class="mt-4 mb-3">
+                                    <bold>Are you sure?</bold>
+                                </h2>
                                 <h5>Do you want to send post?</h5>
-                                <a {#href="/post/delete/{{ post.id }}"#}><button class="btn-lg btn-outline-primary mt-5 mr-2" type="button">Send</button></a>
+                                <a {#href="/post/delete/{{ post.id }}"#}>
+                                    <button class="btn-lg btn-outline-primary mt-5 mr-2" type="button">Send</button>
+                                </a>
                                 <button class="btn-lg btn-outline-secondary mt-5 ml-2" data-dismiss="modal" type="button">Cancel</button>
                             </div>
                         </div>
@@ -89,6 +103,21 @@
         </tbody>
     </table>
     <div class="row d-flex justify-content-center w-100 paginator">
-                {{ knp_pagination_render(posts) }}
+        {{ knp_pagination_render(posts) }}
     </div>
+     <script>
+        $(document).ready(function () {
+            $(".page-link").attr("href", "#");
+            
+            
+        });
+        //$(".page-item").click(function {
+        //    console.log($(this).html());
+             //$.ajax({url: url, success: function(result){
+             //   $(".content").html(result);
+            //}});
+            //http://127.0.0.1:8000/posts?page=2
+       // });
+    </script>
+   
 {% endblock %}
