--- a/templates/mainpage/main.html.twig
+++ b/templates/mainpage/main.html.twig
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>
-            {% block title %}Welcome!{% endblock %}
+            {% block title %}Welcome!
+            {% endblock %}
         </title>
         <!-- Assets -->
         {% include 'mainpage/assets.html.twig' %}
@@ -11,38 +12,42 @@
     </head>
     {% block body %}
         <body class="hold-transition sidebar-mini">
-            <div class="wrapper">
-                    <!-- Navbar -->
-                        {% include 'mainpage/navbar.html.twig' %}
-                    <!-- /.navbar -->
-                    <!-- Sidebar -->
-                        {% include 'mainpage/sidebar.html.twig' %}
-                    <!-- Sidebar -->
-                    <!-- Content -->
-                        {% include 'mainpage/content.html.twig' %}
-                    <!-- Content -->
-                    <!-- Footer -->
-                        {% include 'mainpage/footer.html.twig'%}
-                    <!-- Footer -->
+            <div
+                class="wrapper">
+                <!-- Navbar -->
+                {% include 'mainpage/navbar.html.twig' %}
+                <!-- /.navbar -->
+                <!-- Sidebar -->
+                {% include 'mainpage/sidebar.html.twig' %}
+                <!-- Sidebar -->
+                <!-- Content -->
+                {% include 'mainpage/content.html.twig' %}
+                <!-- Content -->
+                <!-- Footer -->
+            {% include 'mainpage/footer.html.twig'%}
+                <!-- Footer -->
             </div>
-    {% endblock %}
-    {% block javascripts %}
-        <script crossorigin="anonymous" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-        <script crossorigin="anonymous" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-        <script crossorigin="anonymous" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-        <script src="{{ asset('css/dist/js/adminlte.min.js') }}"></script>
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+        {% endblock %}
+        {% block javascripts %}
+            <script crossorigin="anonymous" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+            <script crossorigin="anonymous" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+            <script crossorigin="anonymous" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+            <script src="{{ asset('css/dist/js/adminlte.min.js') }}"></script>
+            <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
-        <script>
-            $(".button").click(function(){
-            let url = $(this).attr('id');
+            <script>
+                $(".button").click(function () {
+                    let url = $(this).attr('id');
 
-            $.ajax({url: url, success: function(result){
-                                $(".content").html(result);
-            }});
-            });
-        </script>
-    
-    {% endblock %}
-</body>
+                    $.ajax({
+                        url: url,
+                        success: function (result) {
+                            $(".content").html(result);
+                        }
+                    });
+                });
+            </script>
+
+        {% endblock %}
+    </body>
 </html>
