--- a/templates/mainpage/sidebar.html.twig
+++ b/templates/mainpage/sidebar.html.twig
@@ -59,6 +59,23 @@
                             </li>
                         </ul>
                     </li>
+                    <!--*********************************************************-->
+                     <li class="nav-item  active treeview menu-open">
+                        <a class="nav-link" href="#">
+                            <i class="nav-icon fa fa-edit"></i>
+                            <p>
+                                Account
+                            </p>
+                        </a>
+                        <ul class="nav nav-treeview" style="display: block;">
+                            <li class="nav-item nav-link">
+                                <a class=" button" href="#" id="/user/edit/{{ app.user.id }}">
+                                    <i class="fa fa-circle-o nav-icon"></i>
+                                    <p>Edit</p>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </nav>
         </div>
