--- a/templates/users/edit_user.html.twig
+++ b/templates/users/edit_user.html.twig
@@ -1,17 +1,42 @@
-<h4>Edit your data</h4>
-
-{{ form_start(loginForm) }}
-{{ form_widget(loginForm) }}
-<button class="btn btn-dark">Edit login</button>
-{{ form_end(loginForm) }}
-
-{{ form_start(passwordForm) }}
-{{ form_widget(passwordForm) }}
-<button class="btn btn-dark">Edit password</button>
-{{ form_end(passwordForm) }}
-
-{{ form_start(emailForm) }}
-{{ form_widget(emailForm) }}
-<button class="btn btn-dark">Edit email</button>
-{{ form_end(emailForm) }}
-
+<style>
+    .form{
+        background: white; 
+        padding: 30px; 
+        border: 1px solid lightgray; 
+        border-top: 3px solid gray; 
+        border-top-left-radius: 5px; 
+        border-top-right-radius: 5px;
+        height: 100%;
+    }
+</style>
+<div class="container-fluid">
+    <h1 class="m-3">Edit your data</h1>
+    <div class="row mt-5">
+        <div class="col-sm-12 col-md-6 mb-3">
+            <div class="form w-95">
+            {{ form_start(loginForm) }}
+            {{ form_widget(loginForm) }}
+            <button class="btn btn-dark mt-4">Edit login</button>
+            {{ form_end(loginForm) }}
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-6 mb-3">
+            <div class="form w-95">
+            {{ form_start(passwordForm) }}
+            {{ form_widget(passwordForm) }}
+            <button class="btn btn-dark mt-4">Edit password</button>
+            {{ form_end(passwordForm) }}
+            </div>
+        </div>
+    </div>
+    <div class="row mt-3">
+        <div class="col-12">
+            <div class="form w-95">
+            {{ form_start(emailForm) }}
+            {{ form_widget(emailForm) }}
+            <button class="btn btn-dark mt-4">Edit email</button>
+            {{ form_end(emailForm) }}
+            </div>
+        </div>
+    </div>
+</div>
