--- a/templates/mainpage/sidebar.html.twig
+++ b/templates/mainpage/sidebar.html.twig
@@ -16,14 +16,14 @@
                             </p>
                         </a>
                         <ul class="nav nav-treeview" style="display: block;">
-                            <li class="nav-item nav-link">
-                                <a class=" button" href="#" id="/posts">
+                            <li class="nav-item archive">
+                                <a class="nav-link button" href="#" id="/posts">
                                     <i class="fa fa-circle-o nav-icon"></i>
                                     <p>Browse</p>
                                 </a>
                             </li>
-                            <li class="nav-item nav-link">
-                                <a class="button" href="#" id="/post/new">
+                            <li class="nav-item archive">
+                                <a class="nav-link button" href="#" id="/post/new">
                                     <i class="fa fa-circle-o nav-icon"></i>
                                     <p>New Post</p>
                                 </a>
@@ -45,14 +45,14 @@
                             </p>
                         </a>
                         <ul class="nav nav-treeview" style="display: block;">
-                            <li class="nav-item nav-link">
-                                <a class=" button" href="#" id="/quest/new">
+                            <li class="nav-item archive">
+                                <a class="nav-link button" href="#" id="/quest/new">
                                     <i class="fa fa-circle-o nav-icon"></i>
                                     <p>New Quest</p>
                                 </a>
                             </li>
-                            <li class="nav-item nav-link">
-                                <a class="button" href="#" id="/post/new">
+                            <li class="nav-item archive">
+                                <a class="nav-link button" href="#" id="/post/new">
                                     <i class="fa fa-circle-o nav-icon"></i>
                                     <p>Edit Quest</p>
                                 </a>
@@ -60,7 +60,7 @@
                         </ul>
                     </li>
                     <!--*********************************************************-->
-                     <li class="nav-item  active treeview menu-open">
+                    <li class="nav-item  active treeview menu-open">
                         <a class="nav-link" href="#">
                             <i class="nav-icon fa fa-edit"></i>
                             <p>
@@ -68,15 +68,15 @@
                             </p>
                         </a>
                         <ul class="nav nav-treeview" style="display: block;">
-                            <li class="nav-item nav-link">
-                                <a class=" button" href="#" id="/user/edit/{{ app.user.id }}">
+                            <li class="nav-item archive">
+                                <a class="nav-link button" href="#" id="/user/edit/{{ app.user.id }}">
                                     <i class="fa fa-circle-o nav-icon"></i>
                                     <p>Edit</p>
                                 </a>
                             </li>
                         </ul>
                     </li>
-                    
+
                 </ul>
             </nav>
         </div>
