--- a/templates/posts/show_posts.html.twig
+++ b/templates/posts/show_posts.html.twig
@@ -70,8 +70,8 @@
                                         <bold>Are you sure?</bold>
                                     </h2>
                                     <h5>Do you want to delete post?</h5>
-                                    <a href="/post/delete/{{ post.id }}">
-                                        <button class="btn-lg btn-outline-danger mt-5 mr-2" type="button">Delete</button>
+                                    <a class="delete" id="{{ post.id }}">
+                                        <button class="btn-lg btn-outline-danger mt-5 mr-2" data-dismiss="modal" type="button">Delete</button>
                                     </a>
                                     <button class="btn-lg btn-outline-secondary mt-5 ml-2" data-dismiss="modal" type="button">Cancel</button>
                                 </div>
@@ -91,7 +91,7 @@
                                         <bold>Are you sure?</bold>
                                     </h2>
                                     <h5>Do you want to send post?</h5>
-                                    <a {#href="/post/delete/{{ post.id }}"#}>
+                                    <a class="delete" id="{{ post.id }}">
                                         <button class="btn-lg btn-outline-primary mt-5 mr-2" type="button">Send</button>
                                     </a>
                                     <button class="btn-lg btn-outline-secondary mt-5 ml-2" data-dismiss="modal" type="button">Cancel</button>
@@ -121,6 +121,20 @@
                 });
             });
 
+        });
+        $(".delete").click(function () {
+            let number = $(this).attr("id");
+            $.ajax({
+                url: "/post/delete/".concat(number),
+                success: function (data) {
+                    $.ajax({
+                        url: "/posts",
+                        success: function (data) {
+                            $(".content").html(data);
+                        }
+                    });
+                }
+            });
         });
     </script>
 
