--- a/templates/posts/edit_post.html.twig
+++ b/templates/posts/edit_post.html.twig
@@ -5,5 +5,6 @@
     {{ form_start(form) }}
     {{ form_widget(form) }}
     <button class="btn btn-dark">Edit Post</button>
+    <img src="{{ asset('uploads/photos/') }}{{ photoPath }}">
     {{ form_end(form) }}
 </div>
