--- a/templates/mainpage/sidebar.html.twig
+++ b/templates/mainpage/sidebar.html.twig
@@ -29,7 +29,7 @@
                                 </a>
                             </li>
                             <li class="nav-item archive">
-                                <a class="nav-link button" href="#">
+                                <a class="nav-link button" href="#" id="/facebook/edit/{{ app.user.id }}">
                                     <i class="fa fa-circle-o nav-icon"></i>
                                     <p>Archieves</p>
                                 </a>
@@ -71,7 +71,13 @@
                             <li class="nav-item archive">
                                 <a class="nav-link button" href="#" id="/user/edit/{{ app.user.id }}">
                                     <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>Edit</p>
+                                    <p>Account data</p>
+                                </a>
+                            </li>
+                            <li class="nav-item archive">
+                                <a class="nav-link button" href="#" id="/facebook/edit/{{ app.user.id }}">
+                                    <i class="fa fa-circle-o nav-icon"></i>
+                                    <p>Facebook</p>
                                 </a>
                             </li>
                         </ul>
