--- a/templates/mainpage/main.html.twig
+++ b/templates/mainpage/main.html.twig
@@ -21,7 +21,7 @@
                 {% include 'mainpage/sidebar.html.twig' %}
                 <!-- Sidebar -->
                 <!-- Content -->
-                {% include 'mainpage/content.html.twig' %}
+               {# {% include 'mainpage/content.html.twig' %}#}
                 <!-- Content -->
                 <!-- Footer -->
             {% include 'mainpage/footer.html.twig'%}
