--- a/templates/mainpage/sidebar.html.twig
+++ b/templates/mainpage/sidebar.html.twig
@@ -1,7 +1,7 @@
 {% block sidebar %}
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
         <a class="brand-link" href="#">
-            <i class="fab fa-docker" style="margin-left: 19px; size:3x"></i>
+            <i class="fab fa-docker" style="-margin-left: 19px; size:3x"></i>
             <span class="brand-text font-weight-light" style="margin-left: 5px;">Pszemke.App!
             </span>
         </a>
@@ -17,19 +17,19 @@
                         </a>
                         <ul class="nav nav-treeview" style="display: block;">
                             <li class="nav-item archive">
-                                <a class="nav-link button" href="#" id="/posts">
+                                <a class="nav-link button" href="/posts" id="/posts">
                                     <i class="fa fa-circle-o nav-icon"></i>
                                     <p>Browse</p>
                                 </a>
                             </li>
                             <li class="nav-item archive">
-                                <a class="nav-link button" href="#" id="/post/new">
+                                <a class="nav-link button" href="/post/new" id="/post/new">
                                     <i class="fa fa-circle-o nav-icon"></i>
                                     <p>New Post</p>
                                 </a>
                             </li>
                             <li class="nav-item archive">
-                                <a class="nav-link button" href="#" id="/facebook/edit/{{ app.user.id }}">
+                                <a class="nav-link button" href="/facebook/edit/{{ app.user.id }}" id="/facebook/edit/{{ app.user.id }}">
                                     <i class="fa fa-circle-o nav-icon"></i>
                                     <p>Archieves</p>
                                 </a>
@@ -46,13 +46,13 @@
                         </a>
                         <ul class="nav nav-treeview" style="display: block;">
                             <li class="nav-item archive">
-                                <a class="nav-link button" href="#" id="/quest/new">
+                                <a class="nav-link button" href="/quest/new" id="/quest/new">
                                     <i class="fa fa-circle-o nav-icon"></i>
                                     <p>New Quest</p>
                                 </a>
                             </li>
                             <li class="nav-item archive">
-                                <a class="nav-link button" href="#" id="/post/new">
+                                <a class="nav-link button" href="/post/new" id="/post/new">
                                     <i class="fa fa-circle-o nav-icon"></i>
                                     <p>Edit Quest</p>
                                 </a>
@@ -69,13 +69,13 @@
                         </a>
                         <ul class="nav nav-treeview" style="display: block;">
                             <li class="nav-item archive">
-                                <a class="nav-link button" href="#" id="/user/edit/{{ app.user.id }}">
+                                <a class="nav-link button" href="/user/edit/{{ app.user.id }}" id="/user/edit/{{ app.user.id }}">
                                     <i class="fa fa-circle-o nav-icon"></i>
                                     <p>Account data</p>
                                 </a>
                             </li>
                             <li class="nav-item archive">
-                                <a class="nav-link button" href="#" id="/facebook/edit/{{ app.user.id }}">
+                                <a class="nav-link button" href="/facebook/edit/{{ app.user.id }}" id="/facebook/edit/{{ app.user.id }}">
                                     <i class="fa fa-circle-o nav-icon"></i>
                                     <p>Facebook</p>
                                 </a>
