--- a/templates/posts/new_post.html.twig
+++ b/templates/posts/new_post.html.twig
@@ -1,3 +1,5 @@
+{% extends 'mainpage/main.html.twig' %}
+{% block content %}
 <style>
     .container-fluid{
         background: white; 
@@ -17,3 +19,4 @@
         <button class="btn btn-dark mt-3">Add Post</button>
         {{ form_end(form) }}
     </div>
+{% endblock %}
