--- a/templates/users/edit_user.html.twig
+++ b/templates/users/edit_user.html.twig
@@ -1,56 +1,52 @@
-<style>
-    .form {
-        background: white;
-        padding: 30px;
-        border: 1px solid lightgray;
-        border-top: 3px solid gray;
-        border-top-left-radius: 5px;
-        border-top-right-radius: 5px;
-        height: 100%;
-    }
-</style>
-{% include 'mainpage/main.html.twig' %}
+{% extends 'mainpage/main.html.twig' %}
 {% block content %}
-    <div class="content-wrapper">
-        <div class="content">
-            <div class="container-fluid">
-                <h1 class="m-3">Edit your data</h1>
-                <div class="row mt-5">
-                    <div class="col-sm-12 col-md-6 mb-3">
-                        <div class="form w-95">
-                            <h2 class="mb-3">
-                                <bold>Edit Login:</bold>
-                            </h2>
-                            {{ form_start(loginForm) }}
-                            {{ form_widget(loginForm) }}
-                            <button class="btn btn-dark mt-4">Edit login</button>
-                            {{ form_end(loginForm) }}
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-6 mb-3">
-                        <div class="form w-95">
-                            <h2 class="mb-3">
-                                <bold>Edit Password:</bold>
-                            </h2>
-                            {{ form_start(passwordForm) }}
-                            {{ form_widget(passwordForm) }}
-                            <button class="btn btn-dark mt-4">Edit password</button>
-                            {{ form_end(passwordForm) }}
-                        </div>
-                    </div>
+    <style>
+        .form {
+            background: white;
+            padding: 30px;
+            border: 1px solid lightgray;
+            border-top: 3px solid gray;
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+            height: 100%;
+        }
+    </style>
+    <div class="container-fluid">
+        <h1 class="m-3">Edit your data</h1>
+        <div class="row mt-5">
+            <div class="col-sm-12 col-md-6 mb-3">
+                <div class="form w-95">
+                    <h2 class="mb-3">
+                        <bold>Edit Login:</bold>
+                    </h2>
+                    {{ form_start(loginForm) }}
+                    {{ form_widget(loginForm) }}
+                    <button class="btn btn-dark mt-4">Edit login</button>
+                    {{ form_end(loginForm) }}
                 </div>
-                <div class="row mt-3">
-                    <div class="col-12">
-                        <div class="form w-95">
-                            <h2 class="mb-3">
-                                <bold>Edit Email:</bold>
-                            </h2>
-                            {{ form_start(emailForm) }}
-                            {{ form_widget(emailForm) }}
-                            <button class="btn btn-dark mt-4">Edit email</button>
-                            {{ form_end(emailForm) }}
-                        </div>
-                    </div>
+            </div>
+            <div class="col-sm-12 col-md-6 mb-3">
+                <div class="form w-95">
+                    <h2 class="mb-3">
+                        <bold>Edit Password:</bold>
+                    </h2>
+                    {{ form_start(passwordForm) }}
+                    {{ form_widget(passwordForm) }}
+                    <button class="btn btn-dark mt-4">Edit password</button>
+                    {{ form_end(passwordForm) }}
+                </div>
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col-12">
+                <div class="form w-95">
+                    <h2 class="mb-3">
+                        <bold>Edit Email:</bold>
+                    </h2>
+                    {{ form_start(emailForm) }}
+                    {{ form_widget(emailForm) }}
+                    <button class="btn btn-dark mt-4">Edit email</button>
+                    {{ form_end(emailForm) }}
                 </div>
             </div>
         </div>
