--- a/templates/posts/show_posts.html.twig
+++ b/templates/posts/show_posts.html.twig
@@ -43,7 +43,7 @@
                             <a class="btn btn-success" href="#">Show Post</a>
                         </td>
                         <td>
-                            <a class="btn btn-warning" href="#">Edit Post</a>
+                            <a class="btn btn-warning" href="/post/edit/{{ post.id }}">Edit Post</a>
                         </td>
 
                         <td>
