--- a/templates/posts/edit_post.html.twig
+++ b/templates/posts/edit_post.html.twig
@@ -1,12 +1,31 @@
-<div class="container">
-    <h4>Edit your Post</h4>
-</div>
-<div class="container">
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn btn-dark">Edit Post</button>
-    {% if photoPath is defined %}
-        <img src="{{ asset('uploads/photos/') }}{{ photoPath }}">
-    {% endif %}
-    {{ form_end(form) }}
-</div>
+{% extends('mainpage/main.html.twig') %}
+{% block content %}
+    <style>
+        .form {
+            background: white;
+            padding: 30px;
+            border: 1px solid lightgray;
+            border-top: 3px solid gray;
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+        }
+    </style>
+    <h2 class="mt-3 mb-4">Edit your Post</h2>
+    <div class="form">
+        {% if photoPath is defined %}
+            <img style="height: 300px; width: auto; border-radius: 5px; border: 2px solid gray; margin-bottom: 30px;"
+                 src="{{ asset('uploads/photos/') }}{{ photoPath }}">
+        {% else %}
+            <div style="width: 300px; height: 200px; border-radius: 5px; border: 2px solid gray; text-align: center; margin-bottom: 30px; padding-top: 70px; ">
+                <h1>No image</h1></div>
+        {% endif %}
+        {{ form_start(form) }}
+        {{ form_widget(form) }}
+
+        <button class="btn btn-dark mt-3">Edit Post</button>
+        <a href="/posts">
+            <button class="btn btn-primary mt-3 ml-2">Back</button>
+        </a>
+        {{ form_end(form) }}
+    </div>
+{% endblock %}
